update portlets and tables

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -336,6 +336,8 @@ Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach h
 ======
 
 // TODO: struktur und richtiger Text
+// TODO: über den Tabellen: Stift bearbeiten; runder Pfeil Daten aktualisieren; Zahnrad Spalten konfigurieren
+// TODO: in Spalten konfigurieren: 4 Punkte Reihenfolge, Kästchen für Haken
 
 NEU Ansicht test
 Einstellungen aufklappen
@@ -386,7 +388,10 @@ image::artikel/neue-ui/assets/detailansicht-eigene-portlets.png[]
 === Verfügbare Portlets und Datenfelder
 
 // TODO: Einleitung - Auftragstypen später im Text
-Über den Portlets eines geöffneten Auftrags sind die Icons Speichern, Sperren/Entsperren, Warenkorb Aufträge erstellen, Trichter Auftrag teilen.
+Über den Portlets eines geöffneten Auftrags sind die Icons
+Speichern: icon:save[set=material] 
+Sperren/Entsperren
+Warenkorb Aufträge erstellen, Trichter Auftrag teilen.
 
 Folgende Auftragstypen lassen sich an dieser Stelle anlegen:
 Gewährleistung: Für alle Positionen, Für bestimmte Positionen
@@ -399,12 +404,12 @@ nicht alle Portlets werden initial mit Daten geladen (Datenlast reduzieren) - na
 https://knowledge.plentymarkets.com/de-de/manual/main/crm/kontakt-bearbeiten.html#erlaeuterungen-einzelne-bereiche
 ////
 
-==== Portlet *Übersicht*
 
 [#portlet-overview]
+=== Portlet *Übersicht*
 Im Portlet *Übersicht* siehst du alle Informationen zur Menge der Artikel und Kosten.
 
-[[table-portlets]]
+[[table-portlet-overview]]
 .Portlet: Übersicht
 [cols="1,3"]
 |====
@@ -432,7 +437,14 @@ Der grüne Strich links bedeutet...
 
 
 [#portlet-status-tags]
+=== Portlet *Status und Tags*
 Im Portlet *Status und Tags* siehst du...
+
+[[table-portlet-status-tags]]
+.Portlet: Status und Tags
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
 
 | *Status*
 |Der Status der Bestellung wird angezeigt.
@@ -447,11 +459,18 @@ Auswahl bei Tags:
 * Status: Geliefert
 * Status: Offen
 * Zahlung: bezahlt
+|====
 
-
-[#portlet-adress]
+[#portlet-address]
+=== Portlet Adressen
 Im Portlet *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadresse.
-Über icon:more_vert[set=material] öffnet sich jeweils das Kontextmenü.
+Über icon:more_vert[set=material] rechts öffnet sich jeweils das Kontextmenü.
+
+[[table-portlet-address]]
+.Portlet: Adressen
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
 
 | *Rechnung*
 |Rechnungsadresse mit Land und ID (VAT fehlt)
@@ -481,10 +500,18 @@ E-Mail
 Telefon
 Typ: Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
 eingeben und speichern
+|====
 
 
 [#portlet-general]
+=== Portlet Allgemein
 Im Portlet *Allgemein* siehst du einen Überblick über deinen Auftrag.
+
+[[table-portlet-general]]
+.Portlet: Allgemein
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
 
 | *Zahlungsart*
 |Wähle die gewünschte Zahlungsart aus der Dropdown-Liste. +
@@ -550,72 +577,188 @@ Die Standardeinstellung für für Herkunft ist Manuelle Eingabe [0].
 
 | *Eigner*
 |Wähle einen Eigner aus der Dropdownliste.
+|====
 
 
-[#portlet-order-items]
-Im Portlet *Auftragspositionen* siehst du...
-// TODO: 
+[#portlet-order-positions]
+=== Portlet Auftragspositionen
+Im Portlet *Auftragspositionen* siehst du alle für den Auftrag relevante Informationen von Menge bis Preise.
 
-[#portlet-payment-conditions]
-Im Portlet *Zahlungsbedingungen* siehst du...
+[[table-order-positions]]
+.Auftragspositionen
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
+
+|*Menge*
+|Die bestellte Menge der Auftragsposition wird angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Artikel-ID*
+|Die Artikel-ID der Auftragsposition wird angezeigt. Durch Klicken auf die ID wird der Artikel geöffnet. +
+Dies ist eine optionale Spalte.
+
+|*Variantennummer.*
+|Die Variantennummer der Auftragsposition wird angezeigt. +
+Dies ist eine optionale Spalte.
+
+|*Variantenname*
+|Der Variantenname der Auftragsposition wird angezeigt. +
+Dies ist eine optionale Spalte.
+
+|*Varianten-ID*
+|Die Varianten-ID der Auftragsposition wird angezeigt.  Durch Klicken auf die ID wird die Variation geöffnet. +
+Diese Spalte ist eine Standardspalte.
+
+|*Artikelname*
+|Der Artikelname der Auftragsposition wird angezeigt. +
+Dies ist eine optionale Spalte.
+
+|*Attribute*
+|Die Attribute der Auftragsposition werden angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Nettopreis*
+|Der Nettopreis der Auftragsposition wird angezeigt.  +
+Diese Spalte ist eine Standardspalte.
+
+|*Bruttopreis*
+|Der Bruttopreis der Auftragsposition wird angezeigt.  +
+Diese Spalte ist eine Standardspalte.
+
+|*Rabatt [%]*
+| Der für die Auftragsposition gewährte Rabatt wird angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Aufpreis gesamt*
+|Die Summe der Aufpreise der Bestelleigenschaften der Auftragsposition werden angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Gesamtbetrag (netto)*
+|Die Nettogesamtsumme der Auftragsposition wird angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Gesamtbetrag (brutto)*
+|Die Bruttogesamtsumme der Auftragsposition wird angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Lager*
+|Das Lager der Auftragsposition wird angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*USt. [%]*
+|Der Umsatzsteuersatz der Auftragsposition wird angezeigt. +
+Diese Spalte ist eine Standardspalte.
+
+|*Externe Artikel-ID*
+|Die externe Artikel-ID wird angezeigt. +
+Dies ist eine optionale Spalte.
+
+|*Externe Auftragspositions-ID*
+|Die vom Marktplatz übermittelte externe Auftragspositions-ID wird angezeigt. +
+Dies ist eine optionale Spalte.
+
+|*Eigenschafts-ID*
+|Die Eigenschafts-ID wird angezeigt. +
+Dies ist eine optionale Spalte.
+|====
+
+
+[#portlet-payment-terms]
+=== Portlet Zahlungsbedingungen
+Im Portlet *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Valuta (Tage)*, *Skonto (Tage)* und *Skonto (%)* werden die Zahlungsbedingungen gestaltet.
+
+[[table-payment-terms]]
+.Zahlungsbedingungen
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
 
 | *Zahlungsziel*
-|Wähle
+|Das Zahlungsziel wird angezeigt. +
 
 | *Skonto (%)*
-|Wähle
+|Das Skonto wird angezeigt. +
 
 | *Valuta (Tage)*
-|Wähle
+|Die Valuta wird angezeigt. +
+
+*_Wichtig_*: Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angeben sein. Wenn für Zahlungsziel nichts oder der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden auch nicht auf Dokumenten übernommen. +
+|====
 
 
 [#portlet-bank-data]
-Im Portlet *Bankdaten* kannst du über + Icon Bankddaten eingeben, es öffnet sich *Neue Bankdaten*.
+=== Portlet Bankdaten
+Im Portlet *Bankdaten* kannst du über Icon + die Bankddaten eingeben, durch Klick auf + öffnet sich ein Fenster *Neue Bankdaten*. Dort kannst du die erforderlichen Daten eingeben. Felder mit Stern sind Pflichtfelder.
 
-| *IBAN* rotes Sternchen
-|Wähle
+| *IBAN* 
+|Gib die *IBAN* ein. +
+Dieses Feld ist ein Pflichtfeld.
 
 | *BIC*
-|Wähle
+|Gib die *BIC* ein.
 
-| *Inhaber:in* rotes Sternchen
-|Wähle
+| *Inhaber:in*
+|Gib den/die *Inhaber:in* ein. +
+Dieses Feld ist ein Pflichtfeld.
 
 | *Kontonummer*
-|Wähle
+|Gib die *Kontonummer* ein.
+Dieses Feld ist ein optionales Feld.
 
 | *Bankleitzahl*
-|Wähle mit den beiden Dreiecken
+|Gib die *Bankleitzahl* ein.
+Dieses Feld ist ein optionales Feld.
 
 | *Bank*
-|Wähle
+|Gib den Namen der *Bank* ein.
+Dieses Feld ist ein optionales Feld.
 
 | *Straße der Bank*
-|Wähle
+|Gib die *Straße der *Bank* ein.
+Dieses Feld ist ein optionales Feld.
 
 | *PLZ und Ort der Bank*
-|Wähle
+|Gib *PLZ und Ort der *Bank* ein.
+Dieses Feld ist ein optionales Feld.
 
 | *Land der Bank*
-|Wähle aus der Dropdown-Liste.
+|Wähle das *Land der Bank* aus der Dropdown-Liste.
 
-Icon Schieberegler SEPA-Lastschriftmandat
-Speichern
+Icon Schieberegler, um das *SEPA-Lastschriftmandat* zu aktivieren.
+Wenn das aktiviert ist, öffnet sich ein neuer Bereich darunter.
+
+| *SEPA-Lastschriftmandat*
+|angezeigt wird *SEPA-Lastschriftmandat erteilt am*.
+Du kannst das Datum ändern duch Eingabe
+
+| *Art des Mandats*
+|Wähle zwischen *SEPA-Firmen-Lastschrift* und *SEPA-Basis-Lastschrift*.
+
+| *Ausführungsmodalität*
+|Wähle zwischen *Einmalige Zahlung* und *Wiederkehrende Zahlung*.
+|====
+
 
 [#portlet-payment-ref]
+=== Zugeordnete Zahlungen
 Im Portlet *Zugeordnete Zahlungen* siehst du...
+Über + kannst du *Zahlung erstellen*. Über Zahnrad *Spalten konfigurieren*
+
+[[table-payment-ref]]
+.Zugeordnete Zahlungen
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
 
 | *Gesamtbetrag Auftrag*
-|Wähle
+|Der *Gesamtbetrag Auftrag* wird angezeigt.
 
 | *Bezahlt*
-|Wähle
+|Der Betrag *Bezahlt* wird angezeigt.
 
 | *Offen*
-|Wähle
-
-Über + Icon Zahlung erstellen
-Über Zahnrad Spalten konfigurieren
+|Der Betrag *Offen* wird angezeigt.
 
 Spalten
 Zahlungs-ID
@@ -631,52 +774,67 @@ Absender der Zahlung
 Eingangsdatum
 Importiert
 Aktion
-
+|====
 
 [#portlet-order-referrer]
+=== Portlet Auftragsrefenzen
 Im Portlet *Auftragsreferenzen* siehst du...
 Über Icon Zahnrad Spalten konfigurieren
 
+[[table-order-referrer]]
+.Auftragsreferenzen
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
+
 | *Beziehung*
-|Wähle
+|Kind
 
 | *ID*
-|Wähle
+|Die *ID* wird angezeigt.
 
 | *Typ*
-|Wähle
+|Der Auftragstyp wird angezeigt.
 
 | *Dokument*
 |Wähle
 
 | *Status*
-|Wähle
+|Der *Status* wird angezeigt.
 
 | *Erstellt*
-|Wähle
+|Das Datum, an dem der Auftrag erstellt wurde, wird angezeigt.
 
 | *Betrag*
-|Wähle
+|Der *Betrag* wird anzeigt.
 
 | *Zahlungsart*
-|Wähle
+|Die gewählte *Zahlungsart* wird angezeigt.
 
 | *Rechnungsadresse*
-|Wähle
+|Die **Rechnungsadresse** wird angezeigt.
 
 | *Lieferadresse*
-|Wähle
+|Die **Lieferadresse** wird angezeigt.
+|====
 
 
 [#portlet-order-properties]
+=== Portlet Eigenschaften
 Im Portlet *Eigenschaften* siehst du...
 Über Icon Zahnrad Spalten konfigurieren
+
+[[table-order-referrer]]
+.Eigenschaften
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
 
 | *Typ-ID*
 |Die Typ-ID wird angezeigt.
 
 | *Name*
-|Wähle
+|Der ? wird angezeigt.
 
 | *Wert*
 |Der ? wird angezeigt.
@@ -686,25 +844,36 @@ Im Portlet *Eigenschaften* siehst du...
 
 | *Letze Änderung*
 |Das Datum der letzten Änderung wird mit Uhrzeit angezeigt.
+|====
 
 
 [#portlet-documents]
-Im Portlet *Dokument* siehst du...
+=== Portlet Dokumente
+Im Portlet *Dokument* siehst du *Alle Dokumente* und *Archvierte Dokumente*.
 Über Icon Zahnrad Spalten konfigurieren
+Icons Suchen, ? und *Gespeicherte Filter*.
+Über Dokument + kannst du ein neues *Dokument erstellen*.
+
+[[table-documents]]
+.Dokumente
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
 
 | *Alle Dokumente*
-|Im Ordner *Alle Dokumente* finden sich: je Symbol davor
-Rechnung
-Externe Rechnung
-Lieferschein
-Mahnschreiben
-Bestellbestätigungen
-Storno Mahnschreiben
-Gelangensbetätigung
-proformarechnung
-Stornobelegt Rechung
-Abhollieferung
-Rücksendeschein
+|Im Ordner *Alle Dokumente* finden sich: je Symbol davor und Anzahl dahinter
+// TODO: wie darstellen? Verweis wohin?
+* Rechnung
+* Externe Rechnung
+* Lieferschein
+* Mahnschreiben
+* Bestellbestätigungen
+* Storno Mahnschreiben
+* Gelangensbetätigung
+* Proformarechnung
+* Stornobelegt Rechung
+* Abhollieferung
+* Rücksendeschein
 
 | *Archivierte Dokumente*
 |Im Ordner *Archivierte Dokumente* finden sich: 
@@ -732,36 +901,37 @@ Datum anzeigen am Symbol Kalender
 // TODO: siehe dazu auftragsdokumente.adoc
 
 | *Name*
-|Wähle
+|Der *Name* des Dokuments wird angezeigt.
 
 | *Nummer*
-|Wähle
+|Die *Nummer* des Dokuments wird angezeigt.
 
 | *Typ*
-|Wähle
+|Der *Typ* des Dokuments wird angezeigt.
 
 | *Referenz*
-|Wähle
+|Die *Referenz* wird angezeigt.
 
 | *Lager*
-|Wähle
+|Das *Lager* wird angezeigt.
 
 | *Eigner*
-|Wähle
+|Der *Eigner* wird angezeigt.
 
 | *Letzte Änderung*
-|Wähle
+|Das Datum der letzten Änderung wird angezeigt.
 
 | *Datum anzeigen*
-|Wähle
+|Das Datum der letzten Änderung wird angezeigt.
 
 | *Aktionen*
-|Wähle
+|Über die 3 Punkte Symbol Herunterladen
 
 |====
 
+
 [#order-details]
-==== Auftragsdetails
+=== Auftragsdetails
 
 Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
 
@@ -815,7 +985,7 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 [#shopping-cart]
 ==== Warenkorb
 
-Am Warenkorb-Symbol (icon:shopping_cart[set=material]) über der Tabelle wird dir die Anzahl der bereits hinzugefügten Artikel angezeigt. Möchtest du während des Hinzufügens von Artikeln den Warenkorb überprüfen oder hinzugefügte Artikel löschen, klicke auf diesen Warenkorb (icon:shopping_cart[set=material]).
+Am (icon:shopping_cart[set=material]) über der Tabelle wird dir die Anzahl der bereits hinzugefügten Artikel angezeigt. Möchtest du während des Hinzufügens von Artikeln den Warenkorb überprüfen oder hinzugefügte Artikel löschen, klicke auf diesen Warenkorb (icon:shopping_cart[set=material]).
 
 Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter indem du auf *Artikel hinzufügen* klickst. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
 
@@ -864,7 +1034,7 @@ Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen:
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-default-settings-order-contact>>.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
-[[table-default-settings-order-contact]]
+[[table-default-settings-order-beta]]
 .Standardeinstellungen für die neue Auftragsanlage (beta)
 [cols="1,3"]
 |====
@@ -921,7 +1091,6 @@ Diese Option ist standardmäßig deaktiviert. Lass sie deaktiviert, wenn du die 
 
 |*Bei Auftragserstellung Preise nur im Warenkorb neu ermitteln*
 |Durch Aktivierung dieser Option legst du fest, dass Preise von Artikeln nur dann neu ermittelt werden, wenn sie in den Warenkorb gelegt werden. Standardmäßig werden Preise schon in der Artikelsuche innerhalb der Auftragsanlage ermittelt und sind dort auswählbar.
-
 |====
 
 
@@ -1179,14 +1348,12 @@ Dies ist eine optionale Spalte.
 |Der aktuelle <<Link zur Seite Auftragsstatus einfügen#, Auftragsstatus>> des Auftrags wird angezeigt. +
 Diese Spalte ist eine Standardspalte.
 // TODO: Link
-
-
 |====
 
 Klappst du den zweiten Level aus (icon:chevron_right[set=material]), werden dir Informationen zu den Auftragspositionen angezeigt.
 
 
-[[tabelle-auftragsuebersicht-auftragspositionen]]
+[[table-order-positions]]
 .Auftragspositionen
 [cols="1,3"]
 |====
@@ -1259,8 +1426,6 @@ Dies ist eine optionale Spalte.
 |*Externe Auftragspositions-ID*
 |Die vom Marktplatz übermittelte externe Auftragspositions-ID wird angezeigt. +
 Dies ist eine optionale Spalte.
-
-
 |====
 
 [#order-search]
@@ -1354,7 +1519,7 @@ default setting: Status, Typ, Auftragseingang, Warenausgang, Mandant (Shop), Zah
 
 Im Bearbeitungsmodus unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter in der Ansicht sichtbar sein sollen.
 
-[[table-name]]
+[[table-available-filters]]
 .Verfügbare und Angezeigte Filter in der Auftragssuche
 [cols="1,3"]
 |====
@@ -1366,7 +1531,7 @@ Hinweis: Die Filter sind in *Grundlegende*, *Datum*, *Status*, *Artikel*, *Konta
 
 |*Angezeigte Filter*
 |In der rechten Spalte werden die ausgewählten Filter angezeigt.
-
+|====
 
 [.instruction]
 Angezeigte Filter wählen:
@@ -1438,7 +1603,7 @@ Operator:
 | *Auftragstyp*
 |Wähle einen Auftragstyp oder mehrere Auftragstypen aus der Dropdown-Liste, um alle Aufträge dieser Art zu suchen.
 IN hellgrau
-xref:auftraege:auftraege-verwalten.adoc[Aufträge verwalten].
+xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten].
 
 | *Dokumentennummer*
 |Gib eine Dokumentennummer ein.
@@ -1500,7 +1665,7 @@ IN hellgrau
 
 | *Storniert*
 |Wähle, ob du nach einem stornierten oder nicht stornierten Auftrag suchst. +
-Wähle die leere Option, *Ja* oder *Nein*.
+Wähle die leere Option, *Ja* oder *Nein*. +
 *leere Option* = ALLE +
 *Ja* = Du suchst nur nach stornierten Aufträgen. +
 *Nein* = Du suchst nur nach nicht stornierten Aufträgen.
@@ -1515,6 +1680,7 @@ Wähle die leere Option, *Ja* oder *Nein*.
 | *Verkaufter Gutschein*
 |Gib eine Nummer ein, um nach verkauften Gutscheinen zu filtern.
 IN hellgrau
+// TODO: hellgrau deaktiviert, schwarz aktiviert für Auswahl
 
 | *Eingelöster Gutschein*
 |Gib eine Nummer ein, um nach eingelösten Gutscheinen zu filtern.
@@ -1944,217 +2110,6 @@ Auftrag [Beta]
 Einrichtung - Einstellungen - Aufträge - Auftragstypen - Auftrag [Beta]
 
 
-
-[#create-order-from-offer]
-=== Auftrag über ein Angebot anlegen
-
-In einem Angebot findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]). Gehe folgendermaßen vor, um einen neuen Auftrag über ein bestehendes Angebot anzulegen. ...
-// TODO: Text auf neue UI anpassen
-Die Besonderheit ist, dass bei Menge eine beliebige Menge eingegeben werden kann.
-Der *Neue Auftrag* wird dir in der Navigation unter dem Angebot in blauer Schrift angezeigt sowie im Portlet *Auftragsreferenzen*.
-
-[[table-order-from-offer]]
-.Spalten Tabelle Neuer Auftrag
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-Einstellung
-| *Status*
-|Wähle einen Status aus der Dropdown-Liste. 
-
-| *Eigner*
-|Wähle einen Eigner aus der Dropdown-Liste.
-Angezeigt wird der aktuelle Nutzer.
-
-Symbol 3 Striche mit +
-
-// TODO: 2. Tabelle
- Suche
-| *Artikel-ID*
-|Die Artikel-ID wird angezeigt.
- 
-| *Varianten-ID*
-|Die Varianten-ID wird angezeigt.
- 
-| *Menge*
-|Die Menge wird angezeigt. (Validierung)
- 
-| *Verbleibende Stückzahl*
-|Die Verbleibende Stückzahl wird angezeigt.
-Die *verbleibende Stückzahl* zeigt dir an, wie viele Artikel du noch übernehmen kannst bzw. wie viele du dem aktuellen Lieferauftrag noch hinzugefügen kannst.
- 
-| *Offene Menge*
-|Die Offene Menge wird angezeigt.
-Die *Offene Menge* zeigt dir an, wie viele Artikel nicht in den Lieferauftrag überführt werden können.
- 
-| *Verfügbarer Warenbestand*
-|Der Verfügbare Warenbestand wird angezeigt.
- 
-| *Artikelname*
-|Der Artikelname wird angezeigt.
- 
-Klicke auf das Warenkorb Symbol mit +
- 
-darunter
- 
-| *Artikel-ID*
-|Die Artikel-ID wird angezeigt.
- 
-| *Varianten-ID*
-|Die Varianten-ID wird angezeigt.
- 
-| *Menge*
-|Die Menge wird angezeigt.
-Die Menge kann hier verändert werden und beliebig hoch sein.
-
-| *Artikelname*
-|Der Artikelname wird angezeigt.
-|====
-
-
-[#create-delivery-order-manually]
-=== Lieferaufträge manuell anlegen
-
-Bei Bedarf kannst du Lieferaufträge manuell über den Hauptauftrag anlegen. Bei dieser Methode wählst du für jeden Lieferauftrag einzeln die Auftragspositionen und -mengen aus, die der Lieferauftrag enthalten soll.
-// TODO: ergänzen
-
-[.instruction]
-Lieferaufträge manuell anlegen:
-
-// TODO: prüfen ob richtig erklärt: Portlet und Lieferauftrag anlegen
-. Öffne das Menü *Aufträge » Aufträge (Testphase) » Auftragssuche*.
-. Öffne aus der Übersicht den Auftrag, für den Lieferaufträge angelegt werden sollen.
-. Klicke auf das Warenkorb und wähle den Auftragstyp *Lieferauftrag*.
-. Wähle die Option *Für bestimmte Positionen*. 
-. Klicke anschließend auf das *Lieferauftrag anlegen* (icon:execute[set=plenty]). +
-→ Der Lieferauftrag wird angelegt.
-. Wiederhole den Prozess, um weitere Lieferaufträge anzulegen.
-
-
-[#create-delivery-orders-automatically]
-=== Lieferaufträge automatisch anlegen
-
-[IMPORTANT]
-.Bedingung für das automatische Anlegen von Lieferaufträgen
-====
-Lieferaufträge können nur automatisch erzeugt werden, wenn noch kein Lieferauftrag zu dem Auftrag besteht.
-====
-
-Wenn du Lieferaufträge automatisch anlegen lässt, greifen die zuvor in <<table-order-types-delivery-order-options>> beschriebenen Kriterien zum Aufsplitten in Lieferaufträge. Somit müssen die Auftragspostionen und -mengen nicht einzeln ausgewählt werden. Stattdessen überführt das System je nach gewähltem Kriterium alle Auftragspositionen automatisch in Lieferaufträge.
-// TODO: Tabelle - wohin? https://knowledge.plentymarkets.com/de-de/manual/main/auftraege/auftraege-verwalten.html#intable-splitting-orders
-
-[.instruction]
-Lieferaufträge automatisch anlegen
-
-. Öffne das Menü *Aufträge » Aufträge (Testphase) » Auftragssuche*.
-. Öffne aus der Übersicht den Auftrag, für den Lieferaufträge angelegt werden sollen.
-. Klicke auf das Warenkorb und wähle den Auftragstyp *Lieferauftrag*.
-. Wähle die Option *Automatisch aufteilen* . 
-. Klicke anschließend auf das *Lieferauftrag anlegen* (icon:execute[set=plenty]). +
-→ Der Lieferauftrag wird angelegt.
-. Wiederhole den Prozess, um weitere Lieferaufträge anzulegen.
-
-// TODO: Text auf neue UI anpassen, nach Rücksprache mit Patrick Beispiele weiterhin nutzbar
-
-////
-Hier die Beispiele einfügen
-[#create-delivery-order-via-ea] 
-=== Lieferaufträge per Ereignisaktion anlegen
-////
-
-== geteilter Auftrag
-
-Beim Teilen eines Auftrags wählst du Artikelpositionen, mit denen ein neuer Auftrag angelegt wird, der diese Positionen enthält. Der neu angelegte Auftrag kann wiederum geteilt werden. Der usprüngliche Auftrag bleibt erhalten, es werden nur die gewählten Artikelpositionen entfernt. Für jeden geteilten Auftrag stehen alle Bearbeitungsmöglichkeiten zur Verfügung.
-
-////
-Tabelle 21 unter https://knowledge.plentymarkets.com/de-de/manual/main/auftraege/auftraege-verwalten.html#intable-splitting-orders
-////
-
-Im Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag* legst du vorab fest, nach welchem Kriterium Aufträge in Lieferaufträge gesplittet werden.
-
-[.instruction]
-Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
-
-. Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag*.
-. Nimm die Einstellungen anhand von <<table-order-types-delivery-order-options>> vor.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-
-[[table-order-types-delivery-order-options]]
-.Optionen für das *Splitten von Aufträgen in Lieferaufträge*
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-2+^| *Aufträge in Lieferaufträge splitten nach*
-
-| *Aus*
-|Es erfolgt *keine Aufsplittung*. +
-*_Achtung_*: Wenn du diese Option aktivierst, können Lieferaufträge nur noch manuell angelegt werden. Das automatische Generieren sowie das Erstellen von Lieferaufträgen per Ereignisaktion sind bei dieser Auswahl nicht möglich.
-
-| *Lager*
-|Die Lieferaufträge werden anhand der verschiedenen *Lager* der Auftragspositionen erstellt.
-
-| *Versandprofil*
-|Die Lieferaufträge werden anhand der verschiedenen *Versandprofile* der Auftragspositionen erstellt.
-
-| *Lager und Versandprofil*
-|Die Lieferaufträge werden anhand der verschiedenen *Lager und der Versandprofile* der Auftragspositionen erstellt.
-
-| *Lager und Netto-Warenbestand*
-|Die Lieferaufträge werden anhand der verschiedenen *Lager und des Netto-Warenbestands* der Auftragspositionen erstellt.
-|====
-
-
-[[table-settings-split-order]]
-.Optionen beim Erfassen eines geteilten Auftrags
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-2+^| *Einstellungen*
-
-| *Eigner*
-|Einen Eigner aus der Dropdown-Liste wählen. Voreingestellt ist der aktuelle Benutzer.
-
-| *Status*
-|Einen Status aus der Dropdown-Liste für die Gutschrift wählen. Voreingestellt ist der Standardstatus, der im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert wurde.
-
-2+^| *Artikel*
-
-| *Artikel-ID*
-|Die Artikel-ID wird angezeigt.
-
-| *Varianten-ID*
-|Die Varianten-ID wird angezeigt.
-
-| *Menge*
-|Die Menge wird angezeigt. - editable with validation
-
-| *Verfügbare Menge*
-|Die Verfügbare Menge wird angezeigt.
-
-| *Name der Artikelposition*
-|Die Artikelposition wird angezeigt.
-
-Warenkorb mit +: klicke darauf, um Artikel in den Warenkorb zu legen.
-
-Warenkorb
-| *Artikel-ID*
-|Die Artikel-ID wird angezeigt.
-
-| *Varianten-ID*
-|Die Varianten-ID wird angezeigt.
-
-| *Menge*
-|Die Menge wird angezeigt. - editable with validation
-
-| *Name der Artikelposition*
-|Die Artikelposition ist editierbar.
-|====
-
-
 Aufträge verwalten (alte UI)
 // TODO: verweisen, aber Doppelungen vermeiden
 
@@ -2176,7 +2131,7 @@ Bei dem Bearbeiten von Positionen im Auftrag kann man in der neuen UI nicht nur 
 Bei Standardeinstellung wird der ... Der manuelle Preis ...
 ////
 
-// TODO: Portlet Waren zurückbuchen
+Portlet: Waren zurückbuchen
 //// 
 in Entwicklung, erklären lassen; siehe https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
 
