--- a/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
@@ -1052,3 +1052,212 @@ Damit andere Online-Händler:innen deine Vorbestellungen nicht dazu missbrauchen
 Einrichtung - Aufträge - Auftragstypen - Multi-Order
 
 
+
+[#create-order-from-offer]
+=== Auftrag über ein Angebot anlegen
+
+In einem Angebot findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]). Gehe folgendermaßen vor, um einen neuen Auftrag über ein bestehendes Angebot anzulegen. ...
+// TODO: Text auf neue UI anpassen
+Die Besonderheit ist, dass bei Menge eine beliebige Menge eingegeben werden kann.
+Der *Neue Auftrag* wird dir in der Navigation unter dem Angebot in blauer Schrift angezeigt sowie im Portlet *Auftragsreferenzen*.
+
+[[table-order-from-offer]]
+.Spalten Tabelle Neuer Auftrag
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+Einstellung
+| *Status*
+|Wähle einen Status aus der Dropdown-Liste. 
+
+| *Eigner*
+|Wähle einen Eigner aus der Dropdown-Liste.
+Angezeigt wird der aktuelle Nutzer.
+
+Symbol 3 Striche mit +
+
+// TODO: 2. Tabelle
+ Suche
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+ 
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+ 
+| *Menge*
+|Die Menge wird angezeigt. (Validierung)
+ 
+| *Verbleibende Stückzahl*
+|Die Verbleibende Stückzahl wird angezeigt.
+Die *verbleibende Stückzahl* zeigt dir an, wie viele Artikel du noch übernehmen kannst bzw. wie viele du dem aktuellen Lieferauftrag noch hinzugefügen kannst.
+ 
+| *Offene Menge*
+|Die Offene Menge wird angezeigt.
+Die *Offene Menge* zeigt dir an, wie viele Artikel nicht in den Lieferauftrag überführt werden können.
+ 
+| *Verfügbarer Warenbestand*
+|Der Verfügbare Warenbestand wird angezeigt.
+ 
+| *Artikelname*
+|Der Artikelname wird angezeigt.
+ 
+Klicke auf das Warenkorb Symbol mit +
+ 
+darunter
+ 
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+ 
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+ 
+| *Menge*
+|Die Menge wird angezeigt.
+Die Menge kann hier verändert werden und beliebig hoch sein.
+
+| *Artikelname*
+|Der Artikelname wird angezeigt.
+|====
+
+
+[#create-delivery-order-manually]
+=== Lieferaufträge manuell anlegen
+
+Bei Bedarf kannst du Lieferaufträge manuell über den Hauptauftrag anlegen. Bei dieser Methode wählst du für jeden Lieferauftrag einzeln die Auftragspositionen und -mengen aus, die der Lieferauftrag enthalten soll.
+// TODO: ergänzen
+
+[.instruction]
+Lieferaufträge manuell anlegen:
+
+// TODO: prüfen ob richtig erklärt: Portlet und Lieferauftrag anlegen
+. Öffne das Menü *Aufträge » Aufträge (Testphase) » Auftragssuche*.
+. Öffne aus der Übersicht den Auftrag, für den Lieferaufträge angelegt werden sollen.
+. Klicke auf das Warenkorb und wähle den Auftragstyp *Lieferauftrag*.
+. Wähle die Option *Für bestimmte Positionen*. 
+. Klicke anschließend auf das *Lieferauftrag anlegen* (icon:execute[set=plenty]). +
+→ Der Lieferauftrag wird angelegt.
+. Wiederhole den Prozess, um weitere Lieferaufträge anzulegen.
+
+
+[#create-delivery-orders-automatically]
+=== Lieferaufträge automatisch anlegen
+
+[IMPORTANT]
+.Bedingung für das automatische Anlegen von Lieferaufträgen
+====
+Lieferaufträge können nur automatisch erzeugt werden, wenn noch kein Lieferauftrag zu dem Auftrag besteht.
+====
+
+Wenn du Lieferaufträge automatisch anlegen lässt, greifen die zuvor in <<table-order-types-delivery-order-options>> beschriebenen Kriterien zum Aufsplitten in Lieferaufträge. Somit müssen die Auftragspostionen und -mengen nicht einzeln ausgewählt werden. Stattdessen überführt das System je nach gewähltem Kriterium alle Auftragspositionen automatisch in Lieferaufträge.
+// TODO: Tabelle - wohin? https://knowledge.plentymarkets.com/de-de/manual/main/auftraege/auftraege-verwalten.html#intable-splitting-orders
+
+[.instruction]
+Lieferaufträge automatisch anlegen
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase) » Auftragssuche*.
+. Öffne aus der Übersicht den Auftrag, für den Lieferaufträge angelegt werden sollen.
+. Klicke auf das Warenkorb und wähle den Auftragstyp *Lieferauftrag*.
+. Wähle die Option *Automatisch aufteilen* . 
+. Klicke anschließend auf das *Lieferauftrag anlegen* (icon:execute[set=plenty]). +
+→ Der Lieferauftrag wird angelegt.
+. Wiederhole den Prozess, um weitere Lieferaufträge anzulegen.
+
+// TODO: Text auf neue UI anpassen, nach Rücksprache mit Patrick Beispiele weiterhin nutzbar
+
+////
+Hier die Beispiele einfügen
+[#create-delivery-order-via-ea] 
+=== Lieferaufträge per Ereignisaktion anlegen
+////
+
+== geteilter Auftrag
+
+Beim Teilen eines Auftrags wählst du Artikelpositionen, mit denen ein neuer Auftrag angelegt wird, der diese Positionen enthält. Der neu angelegte Auftrag kann wiederum geteilt werden. Der usprüngliche Auftrag bleibt erhalten, es werden nur die gewählten Artikelpositionen entfernt. Für jeden geteilten Auftrag stehen alle Bearbeitungsmöglichkeiten zur Verfügung.
+
+////
+Tabelle 21 unter https://knowledge.plentymarkets.com/de-de/manual/main/auftraege/auftraege-verwalten.html#intable-splitting-orders
+////
+
+Im Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag* legst du vorab fest, nach welchem Kriterium Aufträge in Lieferaufträge gesplittet werden.
+
+[.instruction]
+Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
+
+. Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag*.
+. Nimm die Einstellungen anhand von <<table-order-types-delivery-order-options>> vor.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+
+[[table-order-types-delivery-order-options]]
+.Optionen für das *Splitten von Aufträgen in Lieferaufträge*
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+^| *Aufträge in Lieferaufträge splitten nach*
+
+| *Aus*
+|Es erfolgt *keine Aufsplittung*. +
+*_Achtung_*: Wenn du diese Option aktivierst, können Lieferaufträge nur noch manuell angelegt werden. Das automatische Generieren sowie das Erstellen von Lieferaufträgen per Ereignisaktion sind bei dieser Auswahl nicht möglich.
+
+| *Lager*
+|Die Lieferaufträge werden anhand der verschiedenen *Lager* der Auftragspositionen erstellt.
+
+| *Versandprofil*
+|Die Lieferaufträge werden anhand der verschiedenen *Versandprofile* der Auftragspositionen erstellt.
+
+| *Lager und Versandprofil*
+|Die Lieferaufträge werden anhand der verschiedenen *Lager und der Versandprofile* der Auftragspositionen erstellt.
+
+| *Lager und Netto-Warenbestand*
+|Die Lieferaufträge werden anhand der verschiedenen *Lager und des Netto-Warenbestands* der Auftragspositionen erstellt.
+|====
+
+
+[[table-settings-split-order]]
+.Optionen beim Erfassen eines geteilten Auftrags
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+^| *Einstellungen*
+
+| *Eigner*
+|Einen Eigner aus der Dropdown-Liste wählen. Voreingestellt ist der aktuelle Benutzer.
+
+| *Status*
+|Einen Status aus der Dropdown-Liste für die Gutschrift wählen. Voreingestellt ist der Standardstatus, der im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert wurde.
+
+2+^| *Artikel*
+
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird angezeigt. - editable with validation
+
+| *Verfügbare Menge*
+|Die Verfügbare Menge wird angezeigt.
+
+| *Name der Artikelposition*
+|Die Artikelposition wird angezeigt.
+
+Warenkorb mit +: klicke darauf, um Artikel in den Warenkorb zu legen.
+
+Warenkorb
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird angezeigt. - editable with validation
+
+| *Name der Artikelposition*
+|Die Artikelposition ist editierbar.
+|====
