Is referrer active? Checklist - DE+EN

--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -198,6 +198,8 @@ Etsy Listing-ID speichern:
 
 include::partial$checklist-variations.adoc[tag=checklist-intro]
 
+include::partial$checklist-variations.adoc[tag=checklist-variation-referrer]
+
 include::partial$checklist-variations.adoc[tag=checklist-availability-active]
 
 include::partial$checklist-variations.adoc[tag=checklist-availability-active-etsy]
