--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -595,6 +595,8 @@ Variante mit OTTO-Kategoriegruppe verknüpfen:
 
 include::partial$checklist-variations.adoc[tag=checklist-intro]
 
+include::partial$checklist-variations.adoc[tag=checklist-variation-referrer]
+
 include::partial$checklist-variations.adoc[tag=checklist-variation-active]
 
 include::partial$checklist-variations.adoc[tag=checklist-availability-active]
