--- a/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
+++ b/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
@@ -6,6 +6,17 @@
 Damit eine Variante zu {market} exportiert werden kann, muss die Variante die folgenden Voraussetzungen erfüllen:
 //end::checklist-intro[]
 
+//tag::checklist-variation-referrer[]
+[.collapseBox]
+.Ist die Auftragsherkunft aktiviert?
+--
+. Öffne das Menü *Einrichtung » Aufträge » Auftragsherkunft*.
+. Ist die {referrer-option} aktiviert?
+. Wenn nötig, aktiviere diese Auftragsherkunft.
+. Speichere (icon:save[set=plenty]) die Einstellungen.
+--
+//end::checklist-variation-referrer[]
+
 //tag::checklist-variation-active[]
 [.collapseBox]
 .Ist die Variante aktiviert?
@@ -228,6 +239,8 @@ Bei Etsy muss die Hauptvariante des Artikels für den Marktplatz aktiviert werde
 
 ////
 include::partial$checklist-variations.adoc[tag=checklist-intro]
+
+include::partial$checklist-variations.adoc[tag=checklist-variation-referrer]
 
 include::partial$checklist-variations.adoc[tag=checklist-variation-active]
 
