--- a/docs/de-de/modules/maerkte/partials/limango-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-faq.adoc
@@ -13,6 +13,8 @@ In diesem Kapitel findest du Antworten auf häufig gestellte Fragen.
 
 include::partial$checklist-variations.adoc[tag=checklist-intro]
 
+include::partial$checklist-variations.adoc[tag=checklist-variation-referrer]
+
 include::partial$checklist-variations.adoc[tag=checklist-variation-active]
 
 include::partial$checklist-variations.adoc[tag=checklist-availability-active]
