--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -96,6 +96,11 @@ a|Dieser Bereich enthält Kacheln mit Symbolen für die einzelnen Funktionen von
 * image:warenwirtschaft:icon_pick-lists.png[width=24, height=24] 
 xref:warenwirtschaft:mobile-picklisten.adoc#[Mit Picklisten arbeiten]
 
+* image:warenwirtschaft:icon_pick-lists.png[width=24, height=24] 
+xref:warenwirtschaft:mobile-picklisten.adoc#[Mit Picklisten arbeiten]
+
+* (image:warenwirtschaft:icon_box-picking.png[width=24, height=24]) xref:warenwirtschaft:rollende-kommissionierung.adoc#[Rollende Kommissionierung]
+
 Tippe auf eine Kachel, um schnell zur jeweiligen Funktion zu gelangen. Wenn du die Funktionen von plentyWarehouse einige Male genutzt hast, sortieren sich die Kacheln automatisch. So werden die Kacheln der am häufigsten genutzten Funktionen immer links in diesem Bereich angezeigt.
 
 | *Letzte Aktivitäten* 
