insert referrer id for markets - DE

--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -171,7 +171,7 @@ Bei Varianten, die auf Cdiscount als Variantenartikel eingestellt sind, werden A
 
 :market: Cdiscount
 :referrer: Cdiscount
-:referrer-option: pass:quotes[Option *Cdiscount*]
+:referrer-option: pass:quotes[Option *Cdiscount* mit der ID *143*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
