--- a/docs/de-de/modules/maerkte/pages/fruugo.adoc
+++ b/docs/de-de/modules/maerkte/pages/fruugo.adoc
@@ -92,7 +92,7 @@ Es werden nur Varianten mit Bestand zu Fruugo exportiert.
 
 :market: Fruugo
 :referrer: Fruugo
-:referrer-option: pass:quotes[Option *Fruugo*]
+:referrer-option: pass:quotes[Option *Fruugo* mit der ID *145*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
