--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -380,7 +380,7 @@ Je nachdem, ob du nur den idealo Preisvergleich nutzen möchtest oder deinen Kun
 
 :market: dem idealo Preisvergleich
 :referrer: idealo Preisvergleich
-:referrer-option: pass:quotes[Option *idealo*]
+:referrer-option: pass:quotes[Option *idealo* mit der ID *121*]
 :idealo-direkt:
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
