--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -237,7 +237,7 @@ Lager verknüpfst du über die Einstellung *Lager verknüpfen* im Menü *Einrich
 
 :market: Kaufland.de
 :referrer: Kaufland.de
-:referrer-option: pass:quotes[Option *Kaufland.de*]
+:referrer-option: pass:quotes[Option *Kaufland.de* mit der ID *170*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
