--- a/docs/de-de/modules/maerkte/pages/kauflux.adoc
+++ b/docs/de-de/modules/maerkte/pages/kauflux.adoc
@@ -54,7 +54,7 @@ Weitere Informationen findest du bei Kauflux unter link:http://www.kauflux.de/sh
 
 :market: Kauflux
 :referrer: Kauflux
-:referrer-option: pass:quotes[Option *Kauflux*]
+:referrer-option: pass:quotes[Option *Kauflux* mit der ID *12*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
