--- a/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
+++ b/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
@@ -139,7 +139,7 @@ Artikel mit der Einstellung *Beschränkung auf Nettowarenbestand* werden hier ni
 
 :market: Netto Marken-Discount
 :referrer: Netto Marken-Discount
-:referrer-option: pass:quotes[Optionen *Netto* und *plus.de*]
+:referrer-option: pass:quotes[Optionen *Netto* mit der ID *154* und *plus.de* mit der ID *131*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
