--- a/docs/de-de/modules/maerkte/pages/yatego.adoc
+++ b/docs/de-de/modules/maerkte/pages/yatego.adoc
@@ -126,7 +126,7 @@ Die *Standardkategorie* wird im Tab *Kategorien* am Artikel gewählt. Wenn du di
 
 :market: Yatego
 :referrer: Yatego
-:referrer-option: pass:quotes[Option *Yatego*]
+:referrer-option: pass:quotes[Option *Yatego* mit der ID *5*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
