--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -180,7 +180,7 @@ Wenn du keinen Mandanten eingibst, werden limango-Aufträge für den Standard-Ma
 === Auftragsherkunft aktivieren
 
 :referrer: limango
-:referrer-option: pass:quotes[Option *limango*]
+:referrer-option: pass:quotes[Option *limango* mit der ID *16*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
