--- a/docs/de-de/modules/maerkte/pages/shopgate.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopgate.adoc
@@ -174,7 +174,7 @@ a|Optimierte Anzeige des plentyShop auf mobilen Endgeräten einrichten. +
 
 :market: Shopgate
 :referrer: Shopgate
-:referrer-option: pass:quotes[Option *Shopgate*]
+:referrer-option: pass:quotes[Option *Shopgate* mit der ID *109*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
