fix reference type limango - DE+EN

--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -877,7 +877,7 @@ NOTE: Your variations were not exported to limango? No variation data is exporte
 include::partial$viewing_logs.adoc[tag=data-log-intro]
 
 * *Integration* » *limango*
-* *Reference type* » *variationId*
+* *Reference type* » *ItemId*
 
 include::partial$viewing_logs.adoc[tag=data-log-config]
 
