Kathrin/otto herkunft nummer (#503)
* Add Otto Market referrer ID - DE+EN

* otto market referrer screenshot - DE+EN

* Is referrer active? Checklist - DE+EN

* Update daten.adoc

* insert referrer id for markets - DE

* fix reference type limango - DE+EN

--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -875,7 +875,7 @@ NOTE: Deine Varianten wurden nicht zu limango exportiert? Wenn mindestens eine V
 include::partial$logs_abrufen.adoc[tag=data-log-intro]
 
 * *Integration* » *limango*
-* *Referenztyp* » *variationId*
+* *Referenztyp* » *ItemId*
 
 include::partial$logs_abrufen.adoc[tag=data-log-config]
 
