--- a/docs/en-gb/modules/markets/partials/checklist-variations.adoc
+++ b/docs/en-gb/modules/markets/partials/checklist-variations.adoc
@@ -237,6 +237,28 @@ For Etsy, you need to activate the main variation of the item for the market. Th
 //end::checklist-availability-active-etsy[]
 
 
+//tag::checklist-check-filters[]
+[.collapseBox]
+.Are the catalogue filters set correctly?
+--
+In the menu *Data » Catalogues » [Open catalogue] » Filter*, you can set filters to export only specific variations. If any filters are active, only records that meet all the filter criteria are exported. So when the export does not behave as expected it’s worth checking the filter settings.
+
+*_Important:_* Template filters are required by the market and set automatically. You cannot remove these template filters.
+
+[.instruction]
+Checking filters:
+
+. Go to *Data » Catalogues » [Open catalogue]*. +
+. On the left in the side navigation, click on the *Filters* (icon:filter_alt[set=material]) tab. +
+*_Tip:_* The number next to the word *Filter* shows how many filters have been set. The template filters are included in this number. +
+→ The filter overview opens. +
+. Check the logic of the filters.
+. If necessary, remove one or more filters.
+. Save (icon:save[set=material]) the settings.
+--
+//end::checklist-check-filters[]
+
+
 ////
 include::partial$checklist-variations.adoc[tag=checklist-intro]
 
